Исправить ошибки